Fix bug #37277 (cloning Dom Documents or Nodes does not work) Proper fix for bug #36859